tests/baselines/reference/overloadOnConstNoAnyImplementation2.errors.txt
tests/cases/compiler/overloadOnConstNoAnyImplementation2.ts(12,18): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== tests/cases/compiler/overloadOnConstNoAnyImplementation2.ts (1 errors) ====
    interface I {
        x1(a: number, callback: (x: 'hi') => number);
    }
    
    class C {
        x1(a: number, callback: (x: 'hi') => number);
        x1(a: number, callback: (x: string) => number) {
            callback('hi');
            callback('bye');
            var hm = "hm";
            callback(hm);
            callback(1); // error
                     ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
        }
    }
    
    var c: C;
    c.x1(1, (x: 'hi') => { return 1; } );
    c.x1(1, (x: 'bye') => { return 1; } );
    c.x1(1, (x) => { return 1; } );
    
    c.x1(1, (x: number) => { return 1; } );